# geo-cli

./: .dockerignore  .env.example  .gitignore  Claude.md  Dockerfile  Geo cli agent design.md  HANDOFF_NOTE.md  api_server.py  app.py  nginx.conf  pyproject.toml  render.yaml  requirements.txt  run_public.ps1  server.py  setup_and_run.ps1  start.sh
backend/: config.py  main.py
backend/database/: engine.py  migrate_files.py  models.py
backend/routers/: briefs.py  interview.py  pipeline.py  prompts.py  settings.py
backend/schemas/: api_models.py
backend/services/: interview_service.py  log_broadcaster.py  pipeline_service.py
docs/: Handoff_note.md  로컬_실행_가이드.md
frontend/: index.html  package-lock.json  package.json
frontend/src/: App.tsx  index.css
frontend/src/api/: client.ts  websocket.ts
frontend/src/components/layout/: Sidebar.tsx
frontend/src/i18n/: ko.ts
frontend/src/pages/: DataPage.tsx  InterviewPage.tsx  PipelinePage.tsx  PromptEditorPage.tsx  SettingsPage.tsx
frontend/src/stores/: appStore.ts
frontend/src/types/: index.ts
geo_cli/: __main__.py  local_worker.py  main.py  run_local_test.py
geo_cli/agents/: analysis_agent.py  query_agent.py  report_agent.py  testing_agent.py
geo_cli/orchestrator/: agent.py  prompts.py  schema.py
geo_cli/ui/: console.py
geo_cli/utils/: file_io.py  stream_log.py
prompts/: analysis.txt  orchestrator.txt  query_agent.txt  report.txt
