[build-system]
requires = ["setuptools>=68"]
build-backend = "setuptools.build_meta"

[project]
name = "geo-cli"
version = "0.1.0"
description = "Generative Engine Optimization CLI — AI시대의 SEO 분석 도구"
requires-python = ">=3.11"
dependencies = [
    "anthropic>=0.40.0",
    "rich>=13.7.0",
    "python-dotenv>=1.0.0",
]

[project.scripts]
geo = "geo_cli.main:main"

[tool.setuptools.packages.find]
where = ["."]
include = ["geo_cli*"]
